# lumen

./: README.md  index.html  package.json  vite.config.js
.github/workflows/: main.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_assoc.rs  file_ops.rs  lib.rs  main.rs
src/lib/: fileActions.js  fileAssocActions.js  searchStore.js  store.js  toastStore.js
src/lib/components/: EditorPane.svelte  NewFileDialog.svelte  SearchPanel.svelte  SettingsModal.svelte  Sidebar.svelte  StatusBar.svelte  TitleBar.svelte  Toast.svelte  Toolbar.svelte
