[package]
name = "lumen-editor"
version = "0.1.0"
description = "Lumen 文本编辑器"
authors = ["you"]
edition = "2021"

[lib]
name = "lumen_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "0.1"
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
custom-protocol = ["tauri/custom-protocol"]
